--- a/api/pom.xml
+++ b/api/pom.xml
@@ -34,9 +34,9 @@
 
         <extension.name>jakarta.xml.soap</extension.name>
         <spec.version>1.4</spec.version>
-        <new.spec.version>1.4.1</new.spec.version>
+        <new.spec.version>2.0</new.spec.version>
         <non.final>false</non.final>
-        <activation.version>1.2.2</activation.version>
+        <activation.version>2.0.0-rc1</activation.version>
         <legal.doc.source>${project.basedir}/..</legal.doc.source>
         <vendor.name>Eclipse Foundation</vendor.name>
     </properties>
