--- a/api/pom.xml
+++ b/api/pom.xml
@@ -90,9 +90,12 @@
     </mailingLists>
 
     <dependencies>
+        <!-- usign '-api' artifact here is causing issues for API consumers,
+             ie conflicts on JPMS, since one cannot have two artifacts having same
+             packages on the path and 'provided' scope is not transitive -->
         <dependency>
-            <groupId>jakarta.activation</groupId>
-            <artifactId>jakarta.activation-api</artifactId>
+            <groupId>com.sun.activation</groupId>
+            <artifactId>jakarta.activation</artifactId>
             <version>${activation.version}</version>
         </dependency>
         <dependency>
