--- a/api/pom.xml
+++ b/api/pom.xml
@@ -36,7 +36,7 @@
         <spec.version>1.4</spec.version>
         <new.spec.version>2.0</new.spec.version>
         <non.final>false</non.final>
-        <activation.version>2.0.1</activation.version>
+        <activation.version>2.0.2-SNAPSHOT</activation.version>
         <legal.doc.source>${project.basedir}/..</legal.doc.source>
         <vendor.name>Eclipse Foundation</vendor.name>
     </properties>
@@ -90,12 +90,9 @@
     </mailingLists>
 
     <dependencies>
-        <!-- usign '-api' artifact here is causing issues for API consumers,
-             ie conflicts on JPMS, since one cannot have two artifacts having same
-             packages on the path and 'provided' scope is not transitive -->
         <dependency>
-            <groupId>com.sun.activation</groupId>
-            <artifactId>jakarta.activation</artifactId>
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
             <version>${activation.version}</version>
         </dependency>
         <dependency>
