Fixed build and removed Travis job.
Signed-off-by: Tomas Kraus <tomas.kraus@oracle.com>

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,4 +34,4 @@ jobs:
         distribution: 'zulu'
         java-version: ${{ matrix.java_version }}
     - name: Verify
-      run: mvn -B -V -U -C -Poss-release -Pstaging clean verify -Dgpg.skip=true
+      run: cd api && mvn -B -V -U -C -Poss-release -Pstaging clean verify -Dgpg.skip=true
