--- a/api/pom.xml
+++ b/api/pom.xml
@@ -121,8 +121,10 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <!-- FIXME: jUnit tests are failing with 2.21.0 and later -->
-                    <version>2.20</version>
+                    <version>3.0.0-M5</version>
+                    <configuration>
+                        <useModulePath>false</useModulePath>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
