Use snippet in javadoc, fix typos, grammar
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,7 +23,7 @@ jobs:
 
     strategy:
       matrix:
-        java_version: [ 17, 21 ]
+        java_version: [ 21 ]
 
     steps:
     - name: Checkout for build
